--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         import { getDatabase, ref, push, onValue, remove, update } from "https://www.gstatic.com/firebasejs/10.7.0/firebase-database.js";
 
         const firebaseConfig = {
-            apiKey: "AIzaSyDDiEZK38IT1kbRMudw5xrCXfNvvHaJzkQ",
-            authDomain: "programa-db163.firebaseapp.com",
-            databaseURL: "https://programa-db163-default-rtdb.firebaseio.com",
-            projectId: "programa-db163",
-            storageBucket: "programa-db163.appspot.com",
-            messagingSenderId: "110010089612",
-            appId: "1:110010089612:web:a8a47a493c9f766a96fba9"
+            apiKey: "AIzaSyBMJsVpnbOwVOiVNbTZScZdet9qlGigDL0",
+            authDomain: "conexion-8ec0d.firebaseapp.com",
+            databaseURL: "https://conexion-8ec0d-default-rtdb.firebaseio.com",
+            projectId: "conexion-8ec0d",
+            storageBucket: "conexion-8ec0d.appspot.com",
+            messagingSenderId: "679910299749",
+            appId: "1:679910299749:web:9800b464879628b4850e8c"
         };
 
         const app = initializeApp(firebaseConfig);
