--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <input type="number" id="edad">
         <button type="button" onclick="crearRegistro()">Agregar</button>
     </form>
-    <h1>Base de datos en Firebase:</h1>
+    <h1>Base de datos en Firebase:)</h1>
     <br>
     <br>
     <table border="1">
@@ -50,7 +50,7 @@
             const edad = document.getElementById("edad").value;
 
             push(
-                ref(database, 'septimo'),
+                ref(database, 'Caicedo'),
                 {
                     name: nombre,
                     age: edad 
