--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BDD</title>
 </head>
+<style>
+    body {
+        background-color: yellow; /* Cambia esto al color o imagen de fondo que desees */
+        font-family: Arial, sans-serif; /* Cambia la fuente si lo deseas */
+    }
+</style>
 <body>
     <h1>Agregar:</h1>
     <form action="#" id="crud_form">
